# ANDROID-BRAIN

./: .env.example  .gitignore  CLAUDE.md  PRD_TEMPLATE.md  PROJECT_BRAIN_ENGINE_PRD.md  README.md  bigbaagh_auth_prd.md  pyproject.toml  requirements.txt
.claude/agents/: brain-build-agent.md  ui-agent.md
docs/: AGENT-LOOP.md  BRAIN-ARCHITECTURE.md  ORCHESTRATOR-SUPPLEMENT.md  ORCHESTRATOR.md  SETUP-CLAUDE-CODE.md  STUBS_AND_TODO.md  UI-AGENT-IMPLEMENTATION.md  phase_0b_prd_enrichment_plan.md  phase_roadmap_pipeline_plan.md  session_log.md  status.md
project_brain/: __init__.py  server.py
project_brain/brain/: __init__.py  incremental_manager.py  manager.py  schema.py  validator.py
project_brain/cli/: commands.py
project_brain/engines/: __init__.py  bug_engine.py  rule_engine.py  state_engine.py  template_engine.py
project_brain/llm/: __init__.py  (+4 more)
prompts/: feature_extraction_v1.txt  function_fill_repository_v2.txt  function_fill_v1.txt  function_fill_v2.txt  logic_fill_pass.txt  prd_enrichment_v1.txt  prd_extraction_v1.txt
rules/: firestore_rules.py  mvvm_rules.py  naming_rules.py
scripts/: create_enriched_auth_brain.py  run_phase4_auth.py
templates/: hyperspec_template.md
tests/: test_cli_adapter.py  test_generation_tools.py  test_incremental_pipeline.py  test_minor_changes.py  test_new_phases.py  test_prd_enricher.py  test_prd_parser.py  test_prd_scorer.py  test_read_tools.py  test_registry.py  test_roadmap_generator.py  test_roadmap_tools.py  test_rule_engine.py  test_scanner.py  test_schema.py  test_template_engine.py  test_validation_tools.py
(+54 files in other folders)
