[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-brain-engine"
version = "0.1.0"
description = "Android project intelligence and code generation MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "click>=8.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
brain = "project_brain.cli.commands:cli"

[tool.setuptools.packages.find]
include = ["project_brain*", "rules*"]

